--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,21 @@
       <div class="navigation-strip background--dark-navy">
         <div class="outer-container">
           <ul class="list-inline list-separators">
-            <li class="float--left soft--right navigation-skip-to"><a class="link--grey" href="#content" title="Skip to main content"><strong>Skip to main content</strong></a></li>
-            <li class="float--left soft--right"><a class="logo-hmg" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-            <li class="float--left soft--left"><a class="link--grey" href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>great.gov.uk</strong></a></li>
+            <li class="float--left soft-half--right navigation-skip-to"><a class="link link--grey" href="#content" title="Skip to main content"><strong>Skip to main content</strong></a></li>
+            <li class="float--left soft-half--right"><a class="logo-hmg" href="https://www.gov.uk/" title="Go to the GOV.UK homepage"><img src="images/hm_government_logo_horizontal.svg" alt="HM Government logo"></a></li>
+            <li class="float--left soft-half--left"><a class="link link--white" href="https://www.export.great.gov.uk/" title="part of great.gov.uk"><span class="hide-mobile font-light-grey font-light">Part of </span><span class="font-regular">great.gov.uk</span></a></li>
+          </ul>
+
+          <ul class="list-inline list-separators float--right navigation-login font-regular">
+            <li class="float--left soft-half--right"><a class="link--white" href="" title="Sign in"><i class="icon icon--left icon-sign-out"><span class="visuallyhidden">Sign in icon</span></i><span class="hide-mobile">Profile in</span></a></li>
+            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="" title="Register"><span>Register</span></a></li>
           </ul>
         </div>
       </div>
       <div class="background--great-blue">
         <div class="outer-container">
-          <a href="https://www.exportingisgreat.gov.uk" title="Go to the Exporting is great homepage" class="navigation-logo-link float--left">
-            <img src="/images/EiG_logo_horizontal.svg" alt="Exporting is great logo" class="navigation-logo">
+          <a href="https://www.export.great.gov.uk" title="Go to the Exporting is GREAT homepage" class="navigation-logo-link float--left">
+            <img src="/images/eig_logo_horizontal.svg" alt="Exporting is GREAT logo" class="navigation-logo">
           </a>
         </div>
       </div>
@@ -36,13 +41,13 @@
         <div class="navigation-main-section outer-container">
           <nav>
             <ul class="list-inline list-separators navigation-main-menu">
-              <li><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/" class="navigation-main-link navigation-main-link--primary background--light-blue font-regular">New to exporting</a></li>
-              <li><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/" class="navigation-main-link navigation-main-link--primary background--light-blue font-regular">Occasional exporter</a></li>
-              <li><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="navigation-main-link navigation-main-link--primary background--light-blue font-regular">Regular exporter</a></li>
-              <li><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities" class="navigation-main-link navigation-main-link--secondary">Export opportunities</a></li>
+              <li><a title="new to exporting" href="https://www.export.great.gov.uk/new/" class="navigation-main-link navigation-main-link--primary background--light-blue font-regular">New to exporting</a></li>
+              <li><a title="occasional exporter" href="https://www.export.great.gov.uk/occasional/" class="navigation-main-link navigation-main-link--primary background--light-blue font-regular">Occasional exporter</a></li>
+              <li><a title="regular exporter" href="https://www.export.great.gov.uk/regular/" class="navigation-main-link navigation-main-link--primary background--light-blue font-regular">Regular exporter</a></li>
+              <li><a href="https://www.export.great.gov.uk/opportunities" title="Export opportunities" class="navigation-main-link navigation-main-link--secondary">Export opportunities</a></li>
               <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main-link navigation-main-link--secondary">Find a buyer</a></li>
               <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main-link navigation-main-link--secondary navigation-main-link--active">Selling online overseas</a></li>
-              <li><a href="" title="UK Export Finance" class="navigation-main-link navigation-main-link--secondary">UK Export Finance</a></li>
+              <li><a href="" title="Get finance" class="navigation-main-link navigation-main-link--secondary">Get finance</a></li>
               <li><a href="https://events.trade.gov.uk/" title="Events" class="navigation-main-link navigation-main-link--secondary">Events</a></li>
             </ul>
           </nav>
@@ -50,24 +55,38 @@
         </div>
         <div class="navigation-toggle background--dark-navy">
           <div class="outer-container">
-            <ul class="col-3">
-              <li class="navigation-toggle-item navigation-toggle-services"><a title="new to exporting" href="https://www.exportingisgreat.gov.uk/new/">New to exporting</a></li>
-              <li class="navigation-toggle-item navigation-toggle-services"><a title="occasional exporter" href="https://www.exportingisgreat.gov.uk/occasional/">Occasional exporter</a></li>
-              <li class="navigation-toggle-item navigation-toggle-services"><a title="regular exporter" href="https://www.exportingisgreat.gov.uk/regular/" class="last">Regular exporter</a></li>
-            </ul>
-            <ul class="col-3 navigation-toggle-middle">
-              <li class="navigation-toggle-item"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
-              <li class="navigation-toggle-item"><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
-              <li class="navigation-toggle-item"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-toggle-active">Selling online overseas</a></li>
-            </ul>
-            <ul class="col-3 navigation-toggle-middle">
-              <li class="navigation-toggle-item"><a href="" title="UK Export Finance">UK Export Finance</a></li>
-              <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Events">Events</a></li>
-            </ul>
-            <ul class="col-3 navigation-toggle-middle">
-              <li class="navigation-toggle-item"><a href="https://www.exportingisgreat.gov.uk/about/" title="About">About</a></li>
-              <li class="navigation-toggle-item"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us" class="last">Contact us</a></li>
-            </ul>
+            <div class="col-3">
+              <div class="navigation-toggle-services-section">
+                <h3 class="font-large font-light-grey font-light push--bottom hide-mobile">Export readiness</h3>
+                <ul class="font-regular">
+                  <li class="navigation-toggle-item navigation-toggle-services"><a title="new to exporting" href="https://www.export.great.gov.uk/new/">New to exporting</a></li>
+                  <li class="navigation-toggle-item navigation-toggle-services"><a title="occasional exporter" href="https://www.export.great.gov.uk/occasional/">Occasional exporter</a></li>
+                  <li class="navigation-toggle-item navigation-toggle-services"><a title="regular exporter" href="https://www.export.great.gov.uk/regular/" class="last">Regular exporter</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-3">
+              <h3 class="font-large font-light-grey font-light push--bottom hide-mobile soft--left">Online tools</h3>
+              <ul class="navigation-toggle-middle">
+                <li class="navigation-toggle-item"><a href="https://www.export.great.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
+                <li class="navigation-toggle-item"><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
+                <li class="navigation-toggle-item"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-toggle-active">Selling online overseas</a></li>
+              </ul>
+            </div>
+            <div class="col-3">
+              <h3 class="font-large font-light-grey font-light push--bottom hide-mobile soft--left">Other support</h3>
+              <ul class="navigation-toggle-middle">
+                <li class="navigation-toggle-item"><a href="" title="Get finance">Get finance</a></li>
+                <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Events">Events</a></li>
+              </ul>
+            </div>
+            <div class="col-3">
+              <h3 class="font-large font-light-grey font-light soft--left push--bottom hide-mobile">About us</h3>
+              <ul class="navigation-toggle-middle">
+                <li class="navigation-toggle-item"><a href="https://www.export.great.gov.uk/about/" title="About great.gov.uk">About great.gov.uk</a></li>
+                <li class="navigation-toggle-item"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us" class="last">Contact us</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -142,7 +161,7 @@
     <br>
     <div class="background--stone"><strong>(.background--stone)</strong></div>
     <br>
-    <div class="background--white"><strong class="font-base">(.background--white)</strong></div>
+    <div class="background--dark-white"><strong class="font-base">(.background--dark-white)</strong></div>
     <br>
     <div class="background--grey"><strong class="font-white">(.background--grey)</strong></div>
     <br>
@@ -153,6 +172,8 @@
     <div class="background--purple"><strong class="font-white">(.background--purple)</strong></div>
     <br>
     <div class="background--mid-blue"><strong class="font-white">(.background--mid-blue)</strong></div>
+    <br>
+    <div class="background--white"><strong class="font-brand">(.background--white)</strong></div>
     <hr>
     <h3 class="h3">Grids & Breakpoints</h3>
     <div class="push--bottom cf text--center">
@@ -249,16 +270,16 @@
         <div class="outer-container">
           <div class="footer-section">
             <div class="col-8">
-              <a href="https://www.exportingisgreat.gov.uk/" title="Go to the Exporting is Great homepage">
-                <img src="/images/EiG-logo-stacked.svg" alt="Exporting is Great logo" class="footer-logo">
+              <a href="https://www.export.great.gov.uk/" title="Go to the Exporting is GREAT homepage">
+                <img src="/images/eig-logo-stacked.svg" alt="Exporting is GREAT logo" class="footer-logo">
               </a>
             </div>
 
             <div class="col-4">
-              <ul class="footer-links footer-links--border">
-                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/new/" title="New to exporting">New to exporting</a></li>
-                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/occasional/" title="Occasional exporter">Occasional exporter</a></li>
-                <li><a href="https://www.exportingisgreat.gov.uk/regular/" title="Regular exporter">Regular exporter</a></li>
+              <ul class="footer-links footer-links--border font-regular">
+                <li class="push-half--bottom"><a href="https://www.export.great.gov.uk/new/" title="New to exporting">New to exporting</a></li>
+                <li class="push-half--bottom"><a href="https://www.export.great.gov.uk/occasional/" title="Occasional exporter">Occasional exporter</a></li>
+                <li><a href="https://www.export.great.gov.uk/regular/" title="Regular exporter">Regular exporter</a></li>
               </ul>
             </div>
           </div>
@@ -267,20 +288,20 @@
 
             <div class="col-6">
               <ul class="footer-links footer-middle-section">
-                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
+                <li class="push-half--bottom"><a href="https://www.export.great.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
                 <li class="push-half--bottom"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
                 <li class="push-half--bottom"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
-                <li class="push-half--bottom"><a href="" title="UK Export Finance">UK Export Finance</a></li>
+                <li class="push-half--bottom"><a href="" title="Get finance">Get finance</a></li>
                 <li class=""><a href="https://events.trade.gov.uk/" title="Exporting Events">Events</a></li>
               </ul>
             </div>
 
             <div class="col-6">
               <ul class="footer-links footer-links--border">
-                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/about/" title="About">About</a></li>
+                <li class="push-half--bottom"><a href="https://www.export.great.gov.uk/about/" title="About great.gov.uk">About great.gov.uk</a></li>
                 <li class="push-half--bottom"><a href="https://contact-us.export.great.gov.uk/selling_online_overseas" title="Contact us">Contact us</a></li>
-                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/privacy-and-cookies/" title="Privacy and Cookies">Privacy &amp; cookies</a></li>
-                <li class="push-half--bottom"><a href="https://www.exportingisgreat.gov.uk/terms-and-conditions/" title="Terms and conditions">Terms &amp; conditions</a></li>
+                <li class="push-half--bottom"><a href="https://www.export.great.gov.uk/privacy-and-cookies/" title="Privacy and Cookies">Privacy &amp; cookies</a></li>
+                <li class="push-half--bottom"><a href="https://www.export.great.gov.uk/terms-and-conditions/" title="Terms and conditions">Terms &amp; conditions</a></li>
                 <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" title="Department for International Trade">Department for International Trade</a></li>
               </ul>
             </div>
@@ -290,8 +311,8 @@
           <div class="footer-bottom">
             <div class="navigation-strip">
               <ul class="list-inline list-separators">
-                <li class="float--left soft--right"><a class="logo-hmg" href="https://www.gov.uk/" title="hm government"><img src="images/HM_Government_logo_horizontal.svg"></a></li>
-                <li class="float--left soft--left footer-links--border"><a class="link--grey"  href="https://www.exportingisgreat.gov.uk/" title="part of great.gov.uk">Part of <strong>great.gov.uk</strong></a></li>
+                <li class="float--left soft-half--right"><a class="logo-hmg" href="https://www.gov.uk/" title="Go to the GOV.UK homepage"><img src="images/hm_government_logo_horizontal.svg" alt="HM Government logo"></a></li>
+                <li class="float--left soft-half--left footer-links--border"><a class="link link--white"  href="https://www.export.great.gov.uk/" title="part of great.gov.uk"><span class="hide-mobile font-light-grey font-light">Part of </span><span class="font-regular">great.gov.uk</span></a></li>
               </ul>
             </div>
             <div class="footer-copy font-light-grey font-xsmall">
