add sign in script and get finance link

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
             <li class="float--left soft-half--right"><a class="link--white" href="" title="Sign in"><i class="icon icon--left icon-sign-out"><span class="visuallyhidden">Sign in icon</span></i><span class="hide-mobile">Profile in</span></a></li>
             <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="" title="Register"><span>Register</span></a></li>
           </ul>
+          <ul class="list-inline list-separators float--right navigation-login font-regular" id="sso-signout" style="display:none">
+            <li class="float--left soft-half--right"><a class="link--white" href="https://profile.great.gov.uk/" title="Profile"><i class="icon icon--left icon-sign-out"></i><span class="hide-mobile">Profile</span></a></li>
+            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/logout/" title="Sign out"><span>Sign out</span></a></li>
+          </ul>
         </div>
       </div>
       <div class="background--great-blue">
@@ -47,7 +51,7 @@
               <li><a href="https://www.export.great.gov.uk/opportunities" title="Export opportunities" class="navigation-main-link navigation-main-link--secondary">Export opportunities</a></li>
               <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main-link navigation-main-link--secondary">Find a buyer</a></li>
               <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main-link navigation-main-link--secondary navigation-main-link--active">Selling online overseas</a></li>
-              <li><a href="" title="Get finance" class="navigation-main-link navigation-main-link--secondary">Get finance</a></li>
+              <li><a href="https://export.staging.uktrade.io/get-finance/" title="Get finance" class="navigation-main-link navigation-main-link--secondary">Get finance</a></li>
               <li><a href="https://events.trade.gov.uk/" title="Events" class="navigation-main-link navigation-main-link--secondary">Events</a></li>
             </ul>
           </nav>
@@ -76,7 +80,7 @@
             <div class="col-3">
               <h3 class="font-large font-light-grey font-light push--bottom hide-mobile soft--left">Other support</h3>
               <ul class="navigation-toggle-middle">
-                <li class="navigation-toggle-item"><a href="" title="Get finance">Get finance</a></li>
+                <li class="navigation-toggle-item"><a href="https://export.staging.uktrade.io/get-finance/" title="Get finance">Get finance</a></li>
                 <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Events">Events</a></li>
               </ul>
             </div>
@@ -291,7 +295,7 @@
                 <li class="push-half--bottom"><a href="https://www.export.great.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
                 <li class="push-half--bottom"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
                 <li class="push-half--bottom"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
-                <li class="push-half--bottom"><a href="" title="Get finance">Get finance</a></li>
+                <li class="push-half--bottom"><a href="https://export.staging.uktrade.io/get-finance/" title="Get finance">Get finance</a></li>
                 <li class=""><a href="https://events.trade.gov.uk/" title="Exporting Events">Events</a></li>
               </ul>
             </div>
@@ -325,6 +329,7 @@
   <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
   <script src="js/jquery.js"></script>
   <script src="js/navigation.js"></script>
+  <script src="js/sso.js"></script>
 
   <!--[if IE 8]>
     <script src="js/ie8.js"></script>
