--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
               <li><a href="https://www.export.great.gov.uk/opportunities" title="Export opportunities" class="navigation-main-link navigation-main-link--secondary">Export opportunities</a></li>
               <li><a href="http://find-a-buyer.export.great.gov.uk/" title="Find a buyer" class="navigation-main-link navigation-main-link--secondary">Find a buyer</a></li>
               <li><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas" class="navigation-main-link navigation-main-link--secondary navigation-main-link--active">Selling online overseas</a></li>
-              <li><a href="https://export.staging.uktrade.io/get-finance/" title="Get finance" class="navigation-main-link navigation-main-link--secondary">Get finance</a></li>
+              <li><a href="https://export.great.gov.uk/get-finance/" title="Get finance" class="navigation-main-link navigation-main-link--secondary">Get finance</a></li>
               <li><a href="https://events.trade.gov.uk/" title="Events" class="navigation-main-link navigation-main-link--secondary">Events</a></li>
             </ul>
           </nav>
@@ -80,7 +80,7 @@
             <div class="col-3">
               <h3 class="font-large font-light-grey font-light push--bottom hide-mobile soft--left">Other support</h3>
               <ul class="navigation-toggle-middle">
-                <li class="navigation-toggle-item"><a href="https://export.staging.uktrade.io/get-finance/" title="Get finance">Get finance</a></li>
+                <li class="navigation-toggle-item"><a href="https://export.great.gov.uk/get-finance/" title="Get finance">Get finance</a></li>
                 <li class="navigation-toggle-item"><a href="https://events.trade.gov.uk/" title="Events">Events</a></li>
               </ul>
             </div>
@@ -295,7 +295,7 @@
                 <li class="push-half--bottom"><a href="https://www.export.great.gov.uk/opportunities" title="Export opportunities">Export opportunities</a></li>
                 <li class="push-half--bottom"><a href="https://find-a-buyer.export.great.gov.uk/" title="Find a buyer">Find a buyer</a></li>
                 <li class="push-half--bottom"><a href="https://selling-online-overseas.export.great.gov.uk/markets/" title="Selling online overseas">Selling online overseas</a></li>
-                <li class="push-half--bottom"><a href="https://export.staging.uktrade.io/get-finance/" title="Get finance">Get finance</a></li>
+                <li class="push-half--bottom"><a href="https://export.great.gov.uk/get-finance/" title="Get finance">Get finance</a></li>
                 <li class=""><a href="https://events.trade.gov.uk/" title="Exporting Events">Events</a></li>
               </ul>
             </div>
