fix profile in to sign in

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
           </ul>
 
           <ul class="list-inline list-separators float--right navigation-login font-regular">
-            <li class="float--left soft-half--right"><a class="link--white" href="" title="Sign in"><i class="icon icon--left icon-sign-out"><span class="visuallyhidden">Sign in icon</span></i><span class="hide-mobile">Profile in</span></a></li>
+            <li class="float--left soft-half--right"><a class="link--white" href="" title="Sign in"><i class="icon icon--left icon-sign-out"><span class="visuallyhidden">Sign in icon</span></i><span class="hide-mobile">Sign in</span></a></li>
             <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="" title="Register"><span>Register</span></a></li>
           </ul>
           <ul class="list-inline list-separators float--right navigation-login font-regular" id="sso-signout" style="display:none">
