--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
           <ul class="list-inline list-separators">
             <li class="float--left soft-half--right navigation-skip-to"><a class="link link--grey" href="#content" title="Skip to main content"><strong>Skip to main content</strong></a></li>
             <li class="float--left soft-half--right"><a class="logo-hmg" href="https://www.gov.uk/" title="Go to the GOV.UK homepage"><img src="images/hm_government_logo_horizontal.svg" alt="HM Government logo"></a></li>
-            <li class="float--left soft-half--left"><a class="link link--white" href="https://www.export.great.gov.uk/" title="part of great.gov.uk"><span class="hide-mobile font-light-grey font-light">Part of </span><span class="font-regular">great.gov.uk</span></a></li>
+            <li class="float--left soft-half--left"><a class="link link--white" href="https://www.great.gov.uk/" title="part of great.gov.uk"><span class="hide-mobile font-light-grey font-light">Part of </span><span class="font-regular">great.gov.uk</span></a></li>
           </ul>
 
           <ul class="list-inline list-separators float--right navigation-login font-regular">
@@ -316,7 +316,7 @@
             <div class="navigation-strip">
               <ul class="list-inline list-separators">
                 <li class="float--left soft-half--right"><a class="logo-hmg" href="https://www.gov.uk/" title="Go to the GOV.UK homepage"><img src="images/hm_government_logo_horizontal.svg" alt="HM Government logo"></a></li>
-                <li class="float--left soft-half--left footer-links--border"><a class="link link--white"  href="https://www.export.great.gov.uk/" title="part of great.gov.uk"><span class="hide-mobile font-light-grey font-light">Part of </span><span class="font-regular">great.gov.uk</span></a></li>
+                <li class="float--left soft-half--left footer-links--border"><a class="link link--white"  href="https://www.great.gov.uk/" title="part of great.gov.uk"><span class="hide-mobile font-light-grey font-light">Part of </span><span class="font-regular">great.gov.uk</span></a></li>
               </ul>
             </div>
             <div class="footer-copy font-light-grey font-xsmall">
