--- a/public/index.html
+++ b/public/index.html
@@ -269,6 +269,46 @@
         <option>GOV.UK elements option 3</option>
       </select>
     </div>
+    <h4>Steps</h4>
+    <div class="steps">
+      <div class="outer-container">
+        <h3 class="h2 font-reg flush--top push--bottom soft--top">How does it work?</h3>
+        <ul>
+          <li class="col-4 text--center soft--bottom">
+            <img src="http://placehold.it/250x250" alt="">
+            <div class="cf push--top text--left">
+              <span class="steps-number font-med font-grey float--left push-half--right">1</span>
+              <div class="steps-content float--left">
+                <h4 class="h3 font-reg">Find marketplaces</h4>
+                <p class="font-xsmall">Find online marketplaces suitable for your products</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="col-4 text--center soft--bottom">
+            <img src="http://placehold.it/250x250" alt="">
+            <div class="cf push--top text--left">
+              <span class="steps-number font-med font-grey float--left push-half--right">2</span>
+              <div class="steps-content float--left">
+                <h4 class="h3 font-reg">Apply to join</h4>
+                <p class="font-xsmall">Apply via Department for International Trade and get fast track.</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="col-4 text--center soft--bottom">
+            <img src="http://placehold.it/250x250" alt="">
+            <div class="cf push--top text--left">
+              <span class="steps-number font-med font-grey float--left push-half--right">3</span>
+              <div class="steps-content float--left">
+                <h4 class="h3 font-reg">Start selling</h4>
+                <p class="font-xsmall">Reach billions of consumers and grow your business</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 
   <footer role="contentinfo">
