update background colour demo and add npm develop task

--- a/public/index.html
+++ b/public/index.html
@@ -148,38 +148,32 @@
     <button class="button button-blue button-large">Button</button>
     <hr>
     <h3 class="h3">Backgrounds</h3>
-    <br>
-    <div class="background--aqua"><strong class="font-white">(.background--aqua)</strong></div>
-    <br>
-    <div class="background--dark-navy"><strong class="font-white">(.background--dark-navy)</strong></div>
-    <br>
-    <div class="background--dark-blue"><strong class="font-white">(.background--dark-blue)</strong></div>
-    <br>
-    <div class="background--light-blue"><strong class="font-white">(.background--light-blue)</strong></div>
-    <br>
-    <div class="background--light-aqua"><strong class="font-white">(.background--light-aqua)</strong></div>
-    <br>
-    <div class="background--great-red"><strong class="font-white">(.background--great-red)</strong></div>
-    <br>
-    <div class="background--great-blue"><strong class="font-white">(.background--great-blue)</strong></div>
-    <br>
-    <div class="background--flag-red"><strong class="font-white">(.background--flag-red)</strong></div>
-    <br>
-    <div class="background--stone"><strong>(.background--stone)</strong></div>
-    <br>
-    <div class="background--dark-white"><strong class="font-base">(.background--dark-white)</strong></div>
-    <br>
-    <div class="background--grey"><strong class="font-white">(.background--grey)</strong></div>
-    <br>
-    <div class="background--mid-grey"><strong class="font-white">(.background--mid-grey)</strong></div>
-    <br>
-    <div class="background--light-grey"><strong class="font-white">(.background--light-grey)</strong></div>
-    <br>
-    <div class="background--purple"><strong class="font-white">(.background--purple)</strong></div>
-    <br>
-    <div class="background--mid-blue"><strong class="font-white">(.background--mid-blue)</strong></div>
-    <br>
-    <div class="background--white"><strong class="font-brand">(.background--white)</strong></div>
+    <div class="background__panel__container">
+      <div class="background__panel background--aqua"><strong class="font-white">(.background--aqua)</strong></div>
+      <div class="background__panel background--dark-navy"><strong class="font-white">(.background--dark-navy)</strong></div>
+      <div class="background__panel background--dark-blue"><strong class="font-white">(.background--dark-blue)</strong></div>
+      <div class="background__panel background--light-blue"><strong class="font-white">(.background--light-blue)</strong></div>
+      <div class="background__panel background--light-aqua"><strong class="font-white">(.background--light-aqua)</strong></div>
+      <div class="background__panel background--great-red"><strong class="font-white">(.background--great-red)</strong></div>
+      <div class="background__panel background--great-blue"><strong class="font-white">(.background--great-blue)</strong></div>
+      <div class="background__panel background--flag-red"><strong class="font-white">(.background--flag-red)</strong></div>
+
+      <div class="background__panel background--stone"><strong>(.background--stone)</strong></div>
+
+      <div class="background__panel background--dark-white"><strong class="font-base">(.background--dark-white)</strong></div>
+
+      <div class="background__panel background--grey"><strong class="font-white">(.background--grey)</strong></div>
+
+      <div class="background__panel background--mid-grey"><strong class="font-white">(.background--mid-grey)</strong></div>
+
+      <div class="background__panel background--light-grey"><strong class="font-white">(.background--light-grey)</strong></div>
+
+      <div class="background__panel background--purple"><strong class="font-white">(.background--purple)</strong></div>
+
+      <div class="background__panel background--mid-blue"><strong class="font-white">(.background--mid-blue)</strong></div>
+
+      <div class="background__panel background--white"><strong class="font-brand">(.background--white)</strong></div>
+    </div>
     <hr>
     <h3 class="h3">Grids & Breakpoints</h3>
     <div class="push--bottom cf text--center">
