--- a/public/index.bak.html
+++ b/public/index.bak.html
@@ -21,18 +21,49 @@
       <div class="navigation-strip background--dark-navy">
         <div class="outer-container">
           <ul class="list-inline list-separators">
-            <li class="float--left soft-half--right navigation-skip-to"><a class="link link--grey" href="#content" title="Skip to main content"><strong>Skip to main content</strong></a></li>
-            <li class="float--left soft-half--right"><a class="logo-hmg" href="https://www.gov.uk/" title="Go to the GOV.UK homepage"><img src="images/hm_government_logo_horizontal.svg" alt="HM Government logo"></a></li>
-            <li class="float--left soft-half--left"><a class="link link--white" href="https://www.great.gov.uk/" title="part of great.gov.uk"><span class="hide-mobile font-light-grey font-light">Part of </span><span class="font-regular">great.gov.uk</span></a></li>
+            <li class="float--left soft-half--right navigation-skip-to">
+              <a class="link link--grey" href="#content" title="Skip to main content">
+                <strong>Skip to main content</strong>
+              </a>
+            </li>
+            <li class="float--left soft-half--right">
+              <a class="logo-hmg" href="https://www.gov.uk/" title="Go to the GOV.UK homepage">
+                <img src="images/hm_government_logo_horizontal.svg" alt="HM Government logo">
+              </a>
+            </li>
+            <li class="float--left soft-half--left">
+              <a class="link link--white" href="https://www.great.gov.uk/" title="part of great.gov.uk">
+                <span class="hide-mobile font-light-grey font-light">Part of </span>
+                <span class="font-regular">great.gov.uk</span>
+              </a></li>
           </ul>
 
           <ul class="list-inline list-separators float--right navigation-login font-regular">
-            <li class="float--left soft-half--right"><a class="link--white" href="" title="Sign in"><i class="icon icon--left icon-sign-out"><span class="visuallyhidden">Sign in icon</span></i><span class="hide-mobile">Sign in</span></a></li>
-            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="" title="Register"><span>Register</span></a></li>
+            <li class="float--left soft-half--right">
+              <a class="link--white" href="" title="Sign in">
+                <i class="icon icon--left icon-sign-out">
+                  <span class="visuallyhidden">Sign in icon</span>
+                </i>
+                <span class="hide-mobile">Sign in</span>
+              </a>
+            </li>
+            <li class="float--left soft-half--left hide-mobile">
+              <a class="link--white" href="" title="Register">
+                <span>Register</span>
+              </a>
+            </li>
           </ul>
           <ul class="list-inline list-separators float--right navigation-login font-regular" id="sso-signout" style="display:none">
-            <li class="float--left soft-half--right"><a class="link--white" href="https://profile.great.gov.uk/" title="Profile"><i class="icon icon--left icon-sign-out"></i><span class="hide-mobile">Profile</span></a></li>
-            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/logout/" title="Sign out"><span>Sign out</span></a></li>
+            <li class="float--left soft-half--right">
+              <a class="link--white" href="https://profile.great.gov.uk/" title="Profile">
+                <i class="icon icon--left icon-sign-out"></i>
+                <span class="hide-mobile">Profile</span>
+              </a></li>
+            <li class="float--left soft-half--left hide-mobile">
+              <a class="link--white" href="https://sso.trade.great.gov.uk/accounts/logout/" title="Sign out">
+                <span>Sign out</span>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
