Update from exred.

--- a/static-header-footer/header.html
+++ b/static-header-footer/header.html
@@ -13,7 +13,7 @@
         </li>
         <li class="authenticated"><a href="#" class="signout dead">Sign out</a>
         </li>
-      </ul>
+      </ul><span class="greeting"></span>
     </div>
   </div>
   <div id="header-menu">
@@ -34,7 +34,7 @@
 </li>
 <li><a href="#nav-guidance-list" id="nav-guidance" class="list-header">Guidance</a>
 <ul id="nav-guidance-list" aria-labelledby="nav-guidance" class="navigation level-2">
-<li class="lg-6 md-1"><a href="/market-research">Market Research</a>
+<li class="lg-6 md-1"><a href="/market-research">Market research</a>
 </li>
 <li class="lg-6 md-1"><a href="/customer-insight">Customer insight</a>
 </li>
