--- a/static-header-footer/footer.html
+++ b/static-header-footer/footer.html
@@ -17,7 +17,7 @@
     <div class="link-group">
       <p id="footer-links-3" class="list-heading">Guidance</p>
       <ul aria-labelledby="footer-links-3" class="navigation">
-        <li><a href="/market-research">Market Research</a>
+        <li><a href="/market-research">Market research</a>
         </li>
         <li><a href="/customer-insight">Customer insight</a>
         </li>
@@ -25,9 +25,9 @@
         </li>
         <li><a href="/business-planning">Business planning</a>
         </li>
-        <li><a href="#" class="dead">Getting paid</a>
+        <li><a href="/getting-paid">Getting paid</a>
         </li>
-        <li><a href="/operations-and-compliance">Operations And Compliance</a>
+        <li><a href="/operations-and-compliance">Operations and compliance</a>
         </li>
       </ul>
     </div>
@@ -53,13 +53,13 @@
       </li>
       <li><a href="#" class="dead">About</a>
       </li>
-      <li><a href="#" class="dead">Contact Us</a>
+      <li><a href="#" class="dead">Contact us</a>
       </li>
       <li><a href="#" class="dead">Privacy and cookies</a>
       </li>
-      <li><a href="#" class="dead">Terms &amp; conditions</a>
+      <li><a href="#" class="dead">Terms and conditions</a>
       </li>
-      <li><a href="#" class="dead">Department for International Trade</a>
+      <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade">Department for International Trade</a>
       </li>
     </ul>
   </div>
