Updating from exred.

--- a/static-header-footer/footer.html
+++ b/static-header-footer/footer.html
@@ -4,19 +4,19 @@
     <div class="link-group"><img id="footer-dit-logo" src="/static/images/DfIT_WHITE_AW.png" height="75px"/><img id="footer-eig-logo" src="/static/images/eig-logo-stacked.svg" height="75px"/>
     </div>
     <div class="link-group">
-      <p id="footer-links-2" class="list-heading">Export Readiness</p>
-      <ul aria-labelledby="footer-links-2" class="navigation">
-        <li><a href="/new">I'm new to exporting</a>
+      <p id="footer-links-1" class="list-heading">Export readiness</p>
+      <ul aria-labelledby="footer-links-1" class="navigation">
+        <li><a href="/new">I&#39;m new to exporting</a>
         </li>
-        <li><a href="#" class="dead">I export occasionally</a>
+        <li><a href="/occasional">I export occasionally</a>
         </li>
-        <li><a href="#" class="dead">I'm a regular exporter</a>
+        <li><a href="/regular">I&#39;m a regular exporter</a>
         </li>
       </ul>
     </div>
     <div class="link-group">
-      <p id="footer-links-3" class="list-heading">Guidance</p>
-      <ul aria-labelledby="footer-links-3" class="navigation">
+      <p id="footer-links-2" class="list-heading">Guidance</p>
+      <ul aria-labelledby="footer-links-2" class="navigation">
         <li><a href="/market-research">Market research</a>
         </li>
         <li><a href="/customer-insight">Customer insight</a>
@@ -32,13 +32,13 @@
       </ul>
     </div>
     <div class="link-group">
-      <p id="footer-links-4" class="list-heading">Services</p>
-      <ul aria-labelledby="footer-links-4" class="navigation">
-        <li><a href="#" class="dead">Export opportunities</a>
+      <p id="footer-links-3" class="list-heading">Services</p>
+      <ul aria-labelledby="footer-links-3" class="navigation">
+        <li><a href="#" class="dead">Find a buyer</a>
         </li>
         <li><a href="#" class="dead">Selling online overseas</a>
         </li>
-        <li><a href="#" class="dead">Find a buyer</a>
+        <li><a href="#" class="dead">Export opportunities</a>
         </li>
         <li><a href="#" class="dead">Get finance</a>
         </li>
@@ -49,7 +49,7 @@
   </nav>
   <div class="site-links container">
     <ul class="navigation">
-      <li><a href="https://www.great.gov.uk/">Part of <strong>great.gov.uk</strong></a>
+      <li><a href="https://www.great.gov.uk/">Part of great.gov.uk</a>
       </li>
       <li><a href="#" class="dead">About</a>
       </li>
