--- a/static-header-footer/header.html
+++ b/static-header-footer/header.html
@@ -26,9 +26,9 @@
 <ul id="nav-export-readiness-list" aria-labelledby="nav-export-readiness" class="navigation level-2">
 <li class="lg-3 md-1"><a href="/new">I&#39;m new to exporting</a>
 </li>
-<li class="lg-3 md-1"><a href="#" class="dead">I export occasionally</a>
+<li class="lg-3 md-1"><a href="/occasional">I export occasionally</a>
 </li>
-<li class="lg-3 md-1"><a href="#" class="dead">I&#39;m a regular exporter</a>
+<li class="lg-3 md-1"><a href="/regular">I&#39;m a regular exporter</a>
 </li>
 </ul>
 </li>
