--- a/static-header-footer/footer.html
+++ b/static-header-footer/footer.html
@@ -1,70 +1,70 @@
 
 <footer id="footer" class="static-header-footer">
-  <nav class="container grid-container">
+  <nav class="container">
     <div class="link-group"><img id="footer-dit-logo" src="/static/images/DfIT_WHITE_AW.png" height="75px"/><img id="footer-eig-logo" src="/static/images/eig-logo-stacked.svg" height="75px"/>
     </div>
     <div class="link-group">
-      <p id="footer-links-1" class="list-heading">Export readiness</p>
-      <ul aria-labelledby="footer-links-1" class="navigation">
-        <li><a href="/new">I&#39;m new to exporting</a>
-        </li>
-        <li><a href="/occasional">I export occasionally</a>
-        </li>
-        <li><a href="/regular">I&#39;m a regular exporter</a>
-        </li>
-      </ul>
-    </div>
-    <div class="link-group">
-      <p id="footer-links-2" class="list-heading">Guidance</p>
+      <p id="footer-links-2" class="list-heading">Export readiness</p>
       <ul aria-labelledby="footer-links-2" class="navigation">
-        <li><a href="/market-research">Market research</a>
+        <li><a href="http://export.great.gov.uk/new">I'm new to exporting</a>
         </li>
-        <li><a href="/customer-insight">Customer insight</a>
+        <li><a href="http://export.great.gov.uk/occasional">I export occasionally</a>
         </li>
-        <li><a href="/finance">Finance</a>
-        </li>
-        <li><a href="/business-planning">Business planning</a>
-        </li>
-        <li><a href="/getting-paid">Getting paid</a>
-        </li>
-        <li><a href="/operations-and-compliance">Operations and compliance</a>
+        <li><a href="http://export.great.gov.uk/regular">I'm a regular exporter</a>
         </li>
       </ul>
     </div>
     <div class="link-group">
-      <p id="footer-links-3" class="list-heading">Services</p>
+      <p id="footer-links-3" class="list-heading">Guidance</p>
       <ul aria-labelledby="footer-links-3" class="navigation">
-        <li><a href="#" class="dead">Find a buyer</a>
+        <li><a href="http://export.great.gov.uk/market-research">Market research</a>
         </li>
-        <li><a href="#" class="dead">Selling online overseas</a>
+        <li><a href="http://export.great.gov.uk/customer-insight">Customer insight</a>
         </li>
-        <li><a href="#" class="dead">Export opportunities</a>
+        <li><a href="http://export.great.gov.uk/finance">Finance</a>
         </li>
-        <li><a href="#" class="dead">Get finance</a>
+        <li><a href="http://export.great.gov.uk/business-planning">Business planning</a>
         </li>
-        <li><a href="#" class="dead">Events</a>
+        <li><a href="http://export.great.gov.uk/getting-paid">Getting paid</a>
+        </li>
+        <li><a href="http://export.great.gov.uk/operations-and-compliance">Operations and compliance</a>
+        </li>
+      </ul>
+    </div>
+    <div class="link-group">
+      <p id="footer-links-4" class="list-heading">Services</p>
+      <ul aria-labelledby="footer-links-4" class="navigation">
+        <li><a href="http://find-a-buyer.export.great.gov.uk">Find a buyer</a>
+        </li>
+        <li><a href="http://selling-online-overseas.export.great.gov.uk">Selling online overseas</a>
+        </li>
+        <li><a href="http://opportunities.export.great.gov.uk">Export opportunities</a>
+        </li>
+        <li><a href="http://export.great.gov.uk/get-finance">Get finance</a>
+        </li>
+        <li><a href="http://events.trade.gov.uk">Events</a>
         </li>
       </ul>
     </div>
   </nav>
-  <div class="site-links container">
-    <ul class="navigation">
-      <li><a href="https://www.great.gov.uk/">Part of great.gov.uk</a>
-      </li>
-      <li><a href="#" class="dead">About</a>
-      </li>
-      <li><a href="#" class="dead">Contact us</a>
-      </li>
-      <li><a href="#" class="dead">Privacy and cookies</a>
-      </li>
-      <li><a href="#" class="dead">Terms and conditions</a>
-      </li>
-      <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade">Department for International Trade</a>
-      </li>
-    </ul>
-  </div>
-  <div class="global-footer">
-    <p class="container"><a href="https://www.gov.uk/"><img src="/static/images/hm_government_logo_horizontal.svg" alt="HM Government"/></a><span>&copy; Crown copyright 2017. All rights reserved.</span>
-    </p>
-  </div>
+<div class="site-links container">
+  <ul class="navigation">
+    <li><a href="http://great.gov.uk">Part of great.gov.uk</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/about">About</a>
+    </li>
+    <li><a href="http://contactus.trade.gov.uk">Contact us</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/privacy-and-cookies">Privacy and cookies</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/terms-and-conditions">Terms and conditions</a>
+    </li>
+    <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade">Department for International Trade</a>
+    </li>
+  </ul>
+</div>
+<div class="global-footer">
+  <p class="container"><a href="https://www.gov.uk/"><img src="/static/images/hm_government_logo_horizontal.svg" alt="HM Government"/></a><span>&copy; Crown copyright 2017. All rights reserved.</span>
+  </p>
+</div>
 </footer>
