Updated header/footer from exred with current live links.

--- a/static-header-footer/footer.html
+++ b/static-header-footer/footer.html
@@ -3,63 +3,65 @@
   <nav class="container">
     <div class="link-group"><img id="footer-dit-logo" src="/static/images/DfIT_WHITE_AW.png" height="75px"/><img id="footer-eig-logo" src="/static/images/eig-logo-stacked.svg" height="75px"/>
     </div>
-    <div class="link-group">
-      <p id="footer-links-2" class="list-heading">Export readiness</p>
-      <ul aria-labelledby="footer-links-2" class="navigation">
-        <li><a href="http://export.great.gov.uk/new">I'm new to exporting</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/occasional">I export occasionally</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/regular">I'm a regular exporter</a>
-        </li>
-      </ul>
-    </div>
-    <div class="link-group">
-      <p id="footer-links-3" class="list-heading">Guidance</p>
-      <ul aria-labelledby="footer-links-3" class="navigation">
-        <li><a href="http://export.great.gov.uk/market-research">Market research</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/customer-insight">Customer insight</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/finance">Finance</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/business-planning">Business planning</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/getting-paid">Getting paid</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/operations-and-compliance">Operations and compliance</a>
-        </li>
-      </ul>
-    </div>
-    <div class="link-group">
-      <p id="footer-links-4" class="list-heading">Services</p>
-      <ul aria-labelledby="footer-links-4" class="navigation">
-        <li><a href="http://find-a-buyer.export.great.gov.uk">Find a buyer</a>
-        </li>
-        <li><a href="http://selling-online-overseas.export.great.gov.uk">Selling online overseas</a>
-        </li>
-        <li><a href="http://opportunities.export.great.gov.uk">Export opportunities</a>
-        </li>
-        <li><a href="http://export.great.gov.uk/get-finance">Get finance</a>
-        </li>
-        <li><a href="http://events.trade.gov.uk">Events</a>
-        </li>
-      </ul>
-    </div>
+<div class="link-group">
+  <p id="footer-export-readiness-links" class="list-heading">Export Readiness</p>
+  <ul aria-labelledby="footer-export-readiness-links" class="navigation">
+    <li><a href="http://export.great.gov.uk/new">I&#39;m new to exporting</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/occasional">I export occasionally</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/regular">I&#39;m a regular exporter</a>
+    </li>
+  </ul>
+</div>
+<div class="link-group">
+  <p id="footer-guidance-links" class="list-heading">Guidance</p>
+  <ul aria-labelledby="footer-guidance-links" class="navigation">
+    <li><a href="http://export.great.gov.uk/market-research">Market research</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/customer-insight">Customer insight</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/finance">Finance</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/business-planning">Business planning</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/getting-paid">Getting paid</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/operations-and-compliance">Operations and compliance</a>
+    </li>
+  </ul>
+</div>
+<div class="link-group">
+  <p id="footer-services-links" class="list-heading">Services</p>
+  <ul aria-labelledby="footer-services-links" class="navigation">
+    <li><a href="http://find-a-buyer.export.great.gov.uk">Find a buyer</a>
+    </li>
+    <li><a href="http://selling-online-overseas.export.great.gov.uk">Selling online overseas</a>
+    </li>
+    <li><a href="http://opportunities.export.great.gov.uk">Export opportunities</a>
+    </li>
+    <li><a href="http://export.great.gov.uk/get-finance">Get finance</a>
+    </li>
+    <li><a href="http://events.trade.gov.uk">Events</a>
+    </li>
+  </ul>
+</div>
   </nav>
 <div class="site-links container">
   <ul class="navigation">
-    <li><a href="http://great.gov.uk">Part of great.gov.uk</a>
-    </li>
-    <li><a href="http://export.great.gov.uk/about">About</a>
-    </li>
-    <li><a href="http://contactus.trade.gov.uk">Contact us</a>
-    </li>
-    <li><a href="http://export.great.gov.uk/privacy-and-cookies">Privacy and cookies</a>
-    </li>
-    <li><a href="http://export.great.gov.uk/terms-and-conditions">Terms and conditions</a>
-    </li>
-    <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade">Department for International Trade</a>
+    <li class="great"><a href="/">Part of <strong>great.gov.uk</strong>
+        <li><a href="http://great.gov.uk" class="">Part of great.gov.uk</a>
+        </li>
+        <li><a href="http://export.great.gov.uk/about" class="">About</a>
+        </li>
+        <li><a href="http://contactus.trade.gov.uk" class="">Contact us</a>
+        </li>
+        <li><a href="http://export.great.gov.uk/privacy-and-cookies" class="">Privacy and cookies</a>
+        </li>
+        <li><a href="http://export.great.gov.uk/terms-and-conditions" class="">Terms and conditions</a>
+        </li>
+        <li><a href="https://www.gov.uk/government/organisations/department-for-international-trade" class="">Department for International Trade</a>
+        </li></a>
     </li>
   </ul>
 </div>
