--- a/static-header-footer/header.html
+++ b/static-header-footer/header.html
@@ -17,13 +17,13 @@
     </div>
   </div>
   <div id="header-menu">
-    <div class="container"><a href="https://www.gov.uk/government/organisations/department-for-international-trade" class="home"><img src="/static/images/DfIT_WHITE_AW.png" alt="Home"/></a>
+    <div class="container"><a href="http://export.great.gov.uk" class="home"><img src="/static/images/DfIT_WHITE_AW.png" alt="Home"/></a>
 <nav id="menu">
 <ul class="navigation level-1">
-<li><a href="http://export.great.gov.uk/">Home</a>
+<li><a href="http://export.great.gov.uk">Home</a>
 </li>
-<li><a href="#nav-export-readiness-list" id="nav-export-readiness" class="list-header">Export readiness</a>
-<ul id="nav-export-readiness-list" aria-labelledby="nav-export-readiness" class="navigation level-2">
+<li><a href="#export-readiness-links-list" id="export-readiness-links" class="list-header">Export Readiness</a>
+<ul id="export-readiness-links-list" aria-labelledby="export-readiness-links" class="navigation level-2">
 <li class="items-3"><a href="http://export.great.gov.uk/new">I&#39;m new to exporting</a>
 </li>
 <li class="items-3"><a href="http://export.great.gov.uk/occasional">I export occasionally</a>
@@ -32,8 +32,8 @@
 </li>
 </ul>
 </li>
-<li><a href="#nav-guidance-list" id="nav-guidance" class="list-header">Guidance</a>
-<ul id="nav-guidance-list" aria-labelledby="nav-guidance" class="navigation level-2">
+<li><a href="#guidance-links-list" id="guidance-links" class="list-header">Guidance</a>
+<ul id="guidance-links-list" aria-labelledby="guidance-links" class="navigation level-2">
 <li class="items-6"><a href="http://export.great.gov.uk/market-research">Market research</a>
 </li>
 <li class="items-6"><a href="http://export.great.gov.uk/customer-insight">Customer insight</a>
@@ -48,8 +48,8 @@
 </li>
 </ul>
 </li>
-<li><a href="#nav-services-list" id="nav-services" class="list-header">Services</a>
-<ul id="nav-services-list" aria-labelledby="nav-services" class="navigation level-2">
+<li><a href="#services-links-list" id="services-links" class="list-header">Services</a>
+<ul id="services-links-list" aria-labelledby="services-links" class="navigation level-2">
 <li class="items-5"><a href="http://find-a-buyer.export.great.gov.uk">Find a buyer</a><span class="description">Get promoted internationally with a great.gov.uk trade profile</span>
 </li>
 <li class="items-5"><a href="http://selling-online-overseas.export.great.gov.uk">Selling online overseas</a><span class="description">Find online marketplaces</span>
@@ -61,8 +61,6 @@
 <li class="items-5"><a href="http://events.trade.gov.uk">Events</a><span class="description">Central hub for business and networking opportunities</span>
 </li>
 </ul>
-</li>
-<li>
 </li>
 </ul>
 </nav>
